--- a/deprecated/process.ipynb
+++ b/deprecated/process.ipynb
@@ -137,7 +137,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit (windows store)",
+   "display_name": "doorcard",
    "language": "python",
    "name": "python3"
   },
@@ -151,12 +151,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.9 | packaged by conda-forge | (main, Jan 11 2023, 15:15:40) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ecf25fb023808cfd32772909a6b5466dccbf95a6622dc55e103c65f3255affdb"
+    "hash": "167896ca6e5661e44ec36d4fb02d30fbfddf925cb92ab57acd5aaa12d0c0396d"
    }
   }
  },
